[gd_scene load_steps=21 format=3 uid="uid://c8axtmdbhahks"]

[ext_resource type="Script" path="res://Elements/environments/misc/player_cell.gd" id="1_kngen"]
[ext_resource type="Script" path="res://Elements/environments/misc/introsequence.gd" id="2_r8356"]
[ext_resource type="PackedScene" uid="uid://bcou7suhphdrp" path="res://Elements/function/player/player.tscn" id="2_tar4w"]
[ext_resource type="PackedScene" uid="uid://no1bk2mkfory" path="res://Art/blend/misc/player_hub.blend" id="3_gglld"]
[ext_resource type="PackedScene" uid="uid://dhaxwpsinvu6u" path="res://Elements/assets/props/crate.tscn" id="3_xh7qe"]
[ext_resource type="Shader" uid="uid://dtjh0fi6sbiji" path="res://Art/materials/floor/floor.tres" id="4_4xd8j"]
[ext_resource type="Texture2D" uid="uid://bfujcpxg1vljk" path="res://Art/materials/floor/floor_normal.tres" id="5_jt3b1"]
[ext_resource type="PackedScene" uid="uid://bmgk0u34rg2cy" path="res://Art/blend/assets/misc/rail.blend" id="6_gm6vi"]
[ext_resource type="PackedScene" uid="uid://4lamctxd2su2" path="res://Elements/assets/misc/carraige.tscn" id="7_nnqxf"]
[ext_resource type="Theme" uid="uid://qpcg0ktiqy0j" path="res://Art/assets/theme.tres" id="10_5he3v"]

[sub_resource type="Animation" id="Animation_w48k8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RailsPlayerHub/carraige:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 39.7289, -0.322777)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RailsPlayerHub/rail:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 32, -3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RailsPlayerHub/SpotLight3D:light_energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RailsPlayerHub/carraige:enable_col")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_2l42s"]
resource_name = "down"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RailsPlayerHub/carraige:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 29.7289, -0.322777), Vector3(0, 8.74577, -0.322955), Vector3(0, 3.90467, -0.322983), Vector3(0, 1, -0.323)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RailsPlayerHub/rail:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 32, -3), Vector3(0, 0, -3), Vector3(0, 1.98314, -3), Vector3(0, 0, -3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RailsPlayerHub/SpotLight3D:light_energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0.0, 4.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RailsPlayerHub/carraige:enable_col")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_wjo43"]
resource_name = "up"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RailsPlayerHub/carraige:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 1, -0.323), Vector3(0, 9.5, -0.323), Vector3(0, 42, -0.323)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RailsPlayerHub/carraige:enable_col")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ik50q"]
_data = {
"RESET": SubResource("Animation_w48k8"),
"down": SubResource("Animation_2l42s"),
"up": SubResource("Animation_wjo43")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_e6j31"]
size = Vector3(3, 6, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_qrjw0"]
size = Vector3(3.39905, 0.794922, 3.79041)

[sub_resource type="GDScript" id="GDScript_l0f3f"]
resource_name = "portal"
script/source = "extends Area3D

@export var nextscene_string: String = \"res://Elements/environments/chapter1/c1_m1.tscn\"
"

[sub_resource type="BoxShape3D" id="BoxShape3D_080nk"]
size = Vector3(6, 15, 6)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hrqgb"]
render_priority = 0
shader = ExtResource("4_4xd8j")
shader_parameter/amount = 1.0
shader_parameter/normal = ExtResource("5_jt3b1")

[sub_resource type="Environment" id="Environment_ppwta"]
background_mode = 1
volumetric_fog_enabled = true
volumetric_fog_density = 0.025

[node name="IntroCutscene" type="Node3D"]
script = ExtResource("1_kngen")

[node name="Node" type="Node" parent="."]
process_mode = 3
script = ExtResource("2_r8356")
object = ExtResource("3_xh7qe")

[node name="RailsPlayerHub" type="Node3D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="RailsPlayerHub"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_ik50q")
}

[node name="SpotLight3D" type="SpotLight3D" parent="RailsPlayerHub"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 36.7038, 0)
light_color = Color(1, 0, 0, 1)
light_energy = 0.0
shadow_enabled = true
spot_range = 134.984
spot_angle = 14.4

[node name="rail" parent="RailsPlayerHub" instance=ExtResource("6_gm6vi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 32, -3)

[node name="carraige" parent="RailsPlayerHub" instance=ExtResource("7_nnqxf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 39.7289, -0.322777)
enable_col = true

[node name="Area3D" type="Area3D" parent="RailsPlayerHub/carraige"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="RailsPlayerHub/carraige/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
shape = SubResource("BoxShape3D_e6j31")

[node name="Crushed" type="Area3D" parent="RailsPlayerHub"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="RailsPlayerHub/Crushed"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000427246, -0.102539, -0.240051)
shape = SubResource("BoxShape3D_qrjw0")

[node name="Portal" type="Area3D" parent="." groups=["objective_start"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 49.2511, 0)
script = SubResource("GDScript_l0f3f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Portal"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7, 0)
shape = SubResource("BoxShape3D_080nk")

[node name="Player" parent="." instance=ExtResource("2_tar4w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00438, 0)
DISPLAY_DUST = false

[node name="player_hub" parent="." instance=ExtResource("3_gglld")]

[node name="Room" parent="player_hub" index="0"]
surface_material_override/0 = SubResource("ShaderMaterial_hrqgb")

[node name="Light2" type="SpotLight3D" parent="."]
transform = Transform3D(-4.37114e-08, -0.788011, 0.615662, 0, 0.615662, 0.788011, -1, 3.4445e-08, -2.69114e-08, 9, 11, 0)
light_energy = 1.5
light_specular = 0.0
shadow_enabled = true
shadow_reverse_cull_face = true
spot_range = 25.0
spot_angle = 60.0

[node name="Light" type="SpotLight3D" parent="."]
transform = Transform3D(-4.37114e-08, 0.788011, -0.615662, 0, 0.615662, 0.788011, 1, 3.4445e-08, -2.69114e-08, -9, 11, 0)
light_energy = 1.5
light_specular = 0.0
shadow_enabled = true
shadow_reverse_cull_face = true
spot_range = 25.0
spot_angle = 60.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ppwta")

[node name="Control" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("10_5he3v")

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.125911, 0.125911, 0.125911, 0.576471)

[node name="LineEdit" type="LineEdit" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -20.0
offset_right = 75.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 15
placeholder_text = "My name is ..."
max_length = 15
caret_blink = true
caret_blink_interval = 0.2
caret_force_displayed = true

[connection signal="body_entered" from="RailsPlayerHub/carraige/Area3D" to="Node" method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="RailsPlayerHub/Crushed" to="Node" method="_on_crushed_body_entered"]
[connection signal="body_entered" from="Portal" to="." method="_on_portal_body_entered"]
[connection signal="DialogueFinished" from="Player" to="Node" method="_on_player_dialogue_finished"]
[connection signal="text_submitted" from="Control/ColorRect/LineEdit" to="Node" method="_on_line_edit_text_submitted"]

[editable path="RailsPlayerHub/carraige"]
[editable path="player_hub"]
